<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <data>
        <variable
            name="taskDetailViewModel"
            type="com.example.todo.taskdetail.TaskDetailViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:background="@color/light_black"
        tools:context=".taskdetail.TaskDetailFragment">
        <TextView
            android:id="@+id/title_heading"
            android:text="@string/title_heading"
            android:textSize="14sp"
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/task_title"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/border_line"
            app:layout_constraintTop_toBottomOf="@id/title_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/title"
            app:setTitle="@{taskDetailViewModel.task}"/>

        <TextView
            android:id="@+id/desc_heading"
            android:text="@string/title_heading"
            android:textSize="14sp"
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/task_title"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/task_description"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:singleLine="false"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:background="@drawable/border_line"
            app:layout_constraintTop_toBottomOf="@id/desc_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/description"
            app:setDescription="@{taskDetailViewModel.task}"/>

        <Button
            android:id="@+id/close_button"
            android:text="@string/close"
            android:textColor="@color/white"
            android:background="@drawable/border_line_orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed-medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>