<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewTaskFragment">

    <data>
        <variable
            name="taskViewModel"
            type="com.example.todo.TasksViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/title_heading"
            android:text="@string/title_heading"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/orange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/border_line"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="4dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/title_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textShortMessage"
            tools:text="@string/title"/>

        <TextView
            android:id="@+id/description_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description_heading"
            android:layout_marginTop="6dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textColor="@color/orange"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="0dp"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:background="@drawable/border_line"
            android:layout_height="300dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:padding="4dp"
            android:gravity="start"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintTop_toBottomOf="@id/description_heading"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textMultiLine"
            tools:text="@string/description"/>



        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/save_tasks"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_done_foreground"
            android:backgroundTint="@color/orange"
            app:fabCustomSize="50dp"
            app:maxImageSize="40dp"
            android:layout_margin="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:onClick="@{()->taskViewModel.createTask(title.getText().toString(),description.getText().toString())}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
